--- a/images/README
+++ b/images/README
@@ -1,1 +1,5 @@
+Image type: .ppm
+These are some test images that can be used in the program
 
+if you want to create more test images use and online image converter
+to change an image such as .png or .jpeg to a .ppm
