--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 C++ implementation of image segmentation
 
 In order to run this code you will need to install OpenCV as that is 
-used for injesting the image and getting the individual elements from it.
+used for ingesting the image and getting the individual elements from it.
 
 To Run:
 [1] make
